[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "hierarchical-language-modeling"
version = "0.1.0"
description = "We address the task of learning contextualized word, sentence and document representations with a hierarchical language model by stacking Transformer-based encoders on a sentence level and subsequently on a document level and performing masked token prediction."
authors = ["Marco Moldovan"]
readme = "README.md"
packages = [{include = "hierarchical_language_modeling"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1"
lightning = "2.0.0"
hydra-core = "1.3.2"
hydra-colorlog = "1.2.0"
hydra-optuna-sweeper = "1.2.0"
wandb = "0.15.0"
pyrootutils = "^1.0.4"
pre-commit = "^3.2.2"
rich = "^13.3.4"
pytest = "^7.3.1"
sh = "^2.0.3"
transformers = "^4.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
